[gd_scene load_steps=3 format=3 uid="uid://05rqjsuetlup"]

[ext_resource type="Script" path="res://pixel_art_view/pixel_art_view.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://bkv11pj1usbuw" path="res://pixel_art_view/white_pixel.png" id="2"]

[node name="PixelArtView" type="TextureRect"]
texture_filter = 1
offset_right = 16.0
offset_bottom = 16.0
expand_mode = 1
stretch_mode = 5
script = ExtResource("1")

[node name="ContextMenu" type="PopupMenu" parent="."]
size = Vector2i(28, 28)

[node name="SelectionIndicator" type="TextureRect" parent="."]
visible = false
modulate = Color(1, 1, 1, 0.188235)
layout_mode = 0
offset_right = 16.0
offset_bottom = 16.0
texture = ExtResource("2")
expand_mode = 1

[connection signal="mouse_entered" from="." to="." method="_on_PixelArtView_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_PixelArtView_mouse_exited"]
[connection signal="resized" from="." to="." method="_on_PixelArtView_resized"]
[connection signal="id_pressed" from="ContextMenu" to="." method="_on_ContextMenu_id_pressed"]
